# drf-viewset-profiler

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
drf_viewset_profiler/: __init__.py  decorators.py  middleware.py  output.py  utils.py
test-drf-project/: drf_viewset_profiler  manage.py  pytest.ini
test-drf-project/test_drf_project/: settings.py  urls.py  wsgi.py
test-drf-project/testapp/: models.py  routes.py  serializers.py  views.py
test-drf-project/tests/: conftest.py  test_decorators.py  test_middleware.py  test_output.py  test_utils.py  test_viewsets.py
