[tool.poetry]
name = "drf-viewset-profiler"
version = "0.4.0"
description = "Lib to profile all methods from a viewset line by line"
license = "MIT"
readme = 'README.md'
authors = [
    "Frederico V Lima <frederico.vieira@gmail.com>"
]
repository = "https://github.com/fvlima/drf-viewset-profiler"
homepage = "https://github.com/fvlima/drf-viewset-profiler"
keywords = ["django rest framework", "drf", "drf viewset", "viewset line profiler", "profiler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
exclude = ["docs", "tests*"]
include = ["*.rst", "*txt", "*.md", "*.py"]

[tool.poetry.group.dev.dependencies]
model-bakery = "^1.17.0"

[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_localfolder = "drf_viewset_profiler,test_drf_project"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry.dependencies]
python = "^3.8"
Cython = "^3.0"
line_profiler = "^4.0"

[tool.poetry.dev-dependencies]
black = "^23.0"
Django = "^3.2"
djangorestframework = "^3.14"
ipython = "^8.0"
model-bakery = "^1.17"
pre-commit = "==3.2.2"
pytest = "^7.4"
pytest-cov = "^4.0"
pytest-django = "^4.7"
python-status = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
